[main]: global-styles-scrollbar-fix

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -23,16 +23,30 @@
 }
 
 *::-webkit-scrollbar {
-    height: 8px;
     width: 12px;
-    background: #000;
+    height: 8px;
 }
 
 *::-webkit-scrollbar-track {
-    background: var(--card-bg);
+    background: var(--light-bg-redesigned);
 }
 
 *::-webkit-scrollbar-thumb {
+    background-color: var(--icon-redesigned);
+    border-radius: 20px;
+    border: 1px solid var(--accent-redesigned);
+}
+
+.app *::-webkit-scrollbar {
+    height: 8px;
+    width: 12px;
+}
+
+.app *::-webkit-scrollbar-track {
+    background: var(--card-bg);
+}
+
+.app *::-webkit-scrollbar-thumb {
     background: var(--inverted-primary-color);
     border-radius: 20px;
     border: 2px solid var(--primary-color);
